Documentation/Installation/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-search-api
  namespace: qp-search
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        logging: enabled
    spec:
      containers:
        - name: api
          image: qpcms/qp-search-api:1.0.0.4
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-search-integration
  namespace: qp-search
  labels:
    app: integration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integration
  template:
    metadata:
      labels:
        app: integration
        logging: enabled
    spec:
      containers:
        - name: integration
          image: qpcms/qp-search-integration:1.0.0.4
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-search-admin
  namespace: qp-search
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
        logging: enabled
    spec:
      containers:
        - name: admin
          image: qpcms/qp-search-admin:1.0.0.4
          ports:
            - containerPort: 80
