Documentation/Installation/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qa-search-api
  namespace: qp-search
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: qa-search-integration
  namespace: qp-search
spec:
  type: ClusterIP
  selector:
    app: integration
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: qa-search-admin
  namespace: qp-search
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
  - port: 80
    targetPort: 80
