Documentation/Installation/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,X-QP8-Access-Token,Customer-Code"
  name: api
  namespace: qp-search
spec:
  rules:
  - host: api.address
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qa-search-api
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,X-QP8-Access-Token,Customer-Code"
  name: integration
  namespace: qp-search
spec:
  rules:
  - host: integration.address
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qa-search-integration
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,X-QP8-Access-Token,Customer-Code"
  name: admin
  namespace: qp-search
spec:
  rules:
  - host: admin.address
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qa-search-admin
            port: 
              number: 80
